charts/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: producer
  namespace: producer
spec:
  hosts: ["*"]
  gateways: ["istio-system/main-gateway"]
  http:
    - match:
        - uri:
            prefix: /producer
      rewrite:
        uri: /
      route:
        - destination:
            host: producer-service.producer.svc.cluster.local
            port:
              number: 5000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: consumer
  namespace: consumer
spec:
  hosts: ["*"]
  gateways: ["istio-system/main-gateway"]
  http:
    - match:
        - uri:
            prefix: /consumer
      rewrite:
        uri: /
      route:
        - destination:
            host: consumer-service.consumer.svc.cluster.local
            port:
              number: 5001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts: ["*"]
  gateways: ["istio-system/main-gateway"]
  http:
    - match:
        - uri:
            prefix: /grafana
      rewrite:
        uri: /
      route:
        - destination:
            host: monitoring-grafana.istio-system.svc.cluster.local
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts: ["*"]
  gateways: ["istio-system/main-gateway"]
  http:
    - match:
        - uri:
            prefix: /prometheus
      rewrite:
        uri: /
      route:
        - destination:
            host: monitoring-prometheus-server.istio-system.svc.cluster.local
            port:
              number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rabbitmq-ui
  namespace: istio-system
spec:
  hosts: ["*"]
  gateways: ["istio-system/main-gateway"]
  http:
    - match:
        - uri:
            prefix: /rabbitmq
      rewrite:
        uri: /
      route:
        - destination:
            host: rabbitmq.rabbitmq.svc.cluster.local
            port:
              number: 15672
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts: ["*"]
  gateways: ["istio-system/main-gateway"]
  http:
    - match:
        - uri:
            prefix: /kiali
      rewrite:
        uri: /
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
